--- a/src/styles/base/base.css
+++ b/src/styles/base/base.css
@@ -1,8 +1,13 @@
 @import "./reset.css";
-
-/* html {
+@import url("https://fonts.googleapis.com/css?family=Hind+Madurai:300,400,500,700&display=swap");
+html {
   font-size: 62.5%;
-} */
+}
+
+body {
+  background-color: #f3f3f3;
+  font-family: "Hind Madurai", sans-serif;
+}
 
 .container {
   max-width: 1100px;
